common/force-app/main/default/objects/Redemption_Transaction_Log__c/Redemption_Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>Redemption Transaction Log</label>
    <nameField>
        <displayFormat>RTL-{000000}</displayFormat>
        <label>Redemption Transaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>