common/force-app/main/default/objects/Redemption_Transaction_Log__c/fields/Current_Invested_Holding__c.field-meta.xml
<CustomField>
    <fullName>Current_Invested_Holding__c</fullName>
    <label>Current Invested Holding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>