common/force-app/main/default/objects/Redemption_Transaction_Log__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Redemption Transaction Logs</relationshipLabel>
    <relationshipName>Redemption_Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>