common/force-app/main/default/objects/Redemption_Transaction_Log__c/fields/Original_invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_invested_Amount__c</fullName>
    <label>Original Invested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>