common/force-app/main/default/objects/Redemption_Transaction_Log__c/fields/Original_invested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Original_invested_Quantity__c</fullName>
    <label>Original Invested Holding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>