common/force-app/main/default/objects/Redemption_Transaction_Log__c/fields/Redeemed_Holding__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_Holding__c</fullName>
    <label>Redeemed Holding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>